--- a/main.html
+++ b/main.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>栗田の自己紹介〜続き</title>
+  <title>講師プロフィール</title>
 </head>
+
 <body>
-  <H2>誠意製作中！ε=ε=ε=(ﾉ*>∀<)ﾉ</H2>
-  <br />
-  <h4>------------------------------------------------------------------</h4>
+  <header>
+    <H1>
+      <h1>プログラミングコース講師プロフィール</h1>
+    </H1>
+  </header>
+  <div>
+    <!--ここから-->
+    <h2>栗田 虎太朗（くりた こたろう）</H2>
+    <h3>プログラミング講師</h3>
+    <!--ここまで-->
+  </div>
+  <img src="./image/IMG_2914.jpg" alt="弟とのツーショット写真" width="330">
+  <div>
+    <h4>所属</h4>
+    <div>
+      <ul>
+        <li>42Tokyo</li>
+        <li>東京通信大学 情報マネジメント学部 IT・情報システムコース 1年</li>
+      </ul>
+      <p>42Tokyoでプログラミングを基礎から丁寧に学んでいます。<br>
+        DMMと協賛の企業が学費を全部負担してくれるので、完全無料！ アツい！</p>
+    </div>
+  </div>
+  <div>
+    <h4>得意なこと</h4>
+    <div>
+      <ul>
+        <li>
+          <p>
+            イベント企画！<br>
+            N高在学中は、3年間キャンフェス実行委員に参加して、副委員長としてキャンパス公式Webサイトを作ったり、企画班の班長をしたりしていました！<br>
+            また、個人で麻雀大会をしたり、イベント実行委員として季節のイベントや放課後イベントを企画したりもしていました！<br>
+            42Tokyoに入ってからは、個人で作ったSPACE RENDAERの大会も行いました
+          </p>
+        </li>
+        <li>
+          <p>
+            空手<br>
+            小さい頃に10年ほどやっていました。一応今も黒帯を持っています。<br>
+            型は忘れてしまったものも多いけれど、基本的な動作は今も体に染み付いています
+          </p>
+        </li>
+      </ul>
+    </div>
+  </div>
 </body>
+
 </html>
